# plummet

./: .gitignore  CHANGELOG.md  LICENSE.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish_on_tag.yaml  test_on_push.yaml
plummet/: __init__.py
tests/: test_plummet.py
