[tool.poetry]
name = "plummet"
version = "0.2.0"
description = "Utilities for testing with pendulum timestamps"
authors = ["Tucker Beck <tucker.beck@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dusktreader/plummet"

[tool.poetry.dependencies]
python = "^3.6.2"
pendulum = "^2.1.2"
py-buzz = "^2.1.3"
time-machine = {version = "^2.4.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-random-order = "^1.0.4"
mypy = "^0.910"
black = "^21.11b1"
isort = "^5.10.1"
flake8 = "^4.0.1"

[tool.poetry.extras]
time-machine = ["time-machine"]

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
src_paths = ["plummet", "tests"]
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--random-order"
testpaths = ["tests"]

[[tool.mypy.overrides]]
module = [ "buzz", "time-machine" ]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
