[tool.poetry]
name = "plummet"
version = "1.1.0"
description = "Utilities for testing with pendulum timestamps"
authors = ["Tucker Beck <tucker.beck@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dusktreader/plummet"

[tool.poetry.dependencies]
python = "^3.6.2"
pendulum = "^2.1.2"
py-buzz = "^3.1.0"
time-machine = {version = "^2.4.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-random-order = "^1.0.4"
mypy = "^0.910"
black = "^22.1.0"
isort = "^5.10.1"
pyproject-flake8 = "^0.0.1-alpha.2"

[tool.poetry.extras]
time-machine = ["time-machine"]

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
src_paths = ["plummet", "tests"]
multi_line_output = 3
include_trailing_comma = true

[tool.flake8]
max-line-length = 100
max-complexity = 40

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--random-order"
testpaths = ["tests"]

[[tool.mypy.overrides]]
module = [ "time_machine" ]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
